fix warning: [deprecation] URL(String) in URL has been deprecated